<resources>
    <string name="app_name">KneedleApp</string>

    <string name="facebook_key">1673357266254895</string>
    <string name="firebase_url">https://kneedleapp.firebaseio.com</string>

    <string name="username">USER NAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOG IN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="provide_email">Please provide the email address related to the account.</string>
    <string name="example_email">EX: IAM@GMAIL.COM</string>
    <string name="send_email">Send Email</string>
    <string name="email_sent">Email Sent</string>
    <string name="send_again">DIDN\'T GET IT?, SEND AGAIN.</string>
    <string name="name">Name</string>
    <string name="warning_register">You must fill <b>ALL</b> the highlighted sections</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="let_me_in">Let Me In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_user">REGISTER</string>
    <string name="error_username_empty">Please enter username</string>
    <string name="error_password_empty">Please enter password</string>
    <string name="error_email_empty">Please enter email</string>
    <string name="error_email_valid">Please enter valid email</string>
    <string name="comments">COMMENTS</string>
    <string name="post">POST</string>
    <string name="add_comment">Add Comment...</string>

    <string name="new_post">NEW POST</string>
    <string name="library">LIBRARY</string>
    <string name="photo">PHOTO</string>
    <string name="camera">CAMERA</string>
    <string name="add_caption">ADD CAPTION...</string>
    <string name="posts">POSTS</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="edit">EDIT</string>
    <string name="follow">FOLLOW</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="editprofile">EDIT PROFILE</string>
    <string name="location">LOCATION:</string>
    <string name="state">STATE</string>
    <string name="city">CITY</string>
    <string name="zip">ZIP&#160;CODE</string>
    <string name="location_info">DOES YOUR EMPLOYER OR COMPANY HAVE A PROFILE ON KNEEDLE?</string>
    <string name="location_info_sub">IF SO YOU MAY LINK IT TO YOUR PROFILE BELOW:</string>
    <string name="save">SAVE</string>
    <string name="search_profile">SEARCH PROFILE</string>
    <string name="follow_request">FOLLOW REQUESTS</string>
    <string name="hide">HIDE</string>


    <string name="header_image">HEADER_IMAGE</string>
    <string name="main_image">MAIN_IMAGE</string>
    <string name="user_image">USER_IMAGE</string>
    <string name="heart_image">HEART_IMAGE</string>
    <string name="user_name">USERNAME</string>
    <string name="likes">LIKES</string>
    <string name="country">COUNTRY</string>
    <string name="options">OPTIONS</string>
    <string name="photos_liked">PHOTOS YOU\'VE LIKED</string>
    <string name="support">SUPPORT</string>
    <string name="report_problem">REPORT A PROBLEM</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="terms_of_service">TERMS OF SERVICE</string>
    <string name="prefernces">PREFERENCES</string>
    <string name="share_settings">SHARE SETTINGS</string>
    <string name="push_noti">PUSH NOTIFICATION</string>
    <string name="save_ori">SAVE ORIGINAL PHOTOS</string>
    <string name="logout">LOG OUT</string>
    <string name="signup_with_facebook">Signup with Facebook</string>
    <string name="signup_with_twitter">Signup with Twitter</string>
    <string name="term_condition">I agree with Terms and Conditions</string>
    <string name="twitter_consumer_key">IPXy5QI9bvsbg0E6X5RPyI8V3</string>
    <string name="twitter_consumer_secret">KIheMUxPOpnnsCZkC6kxwKGVTiAOGoRhecPcnwee1eyPzOLjxF</string>
    <string name="block_users">Blocked Users</string>
    <string name="logout_message">Do you really want to logout?</string>
    <string name="company_name">Company Name</string>
    <string name="post_info">Upload photo from Gallery or capture a new by using Camera.</string>
    <string name="gallery">Gallery</string>


</resources>
