<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.kneedleapp.fragment.LocationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/textColorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/underline"
            android:paddingBottom="@dimen/margin_10"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/margin_10">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/margin_5"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/editprofile"
                android:textColor="@color/colourBlack"
                android:textSize="@dimen/margin_15" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_20"
            android:paddingTop="@dimen/margin_20">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8"
                android:text="@string/location"
                android:textColor="@color/colourBlack"
                android:textSize="@dimen/font_15" />

        </LinearLayout>

        <Spinner
            style="@style/spinnerarrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_20"
            android:paddingTop="@dimen/margin_20"></Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_20">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/state"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colourBlack"
                android:textSize="@dimen/font_12" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_weight="0.5"
                android:hint="@string/city"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colourBlack"
                android:textSize="@dimen/font_12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_10"
            android:weightSum="1">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/zip"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colourBlack"
                android:textSize="@dimen/font_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_30"
            android:background="#E7E7E7"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_15"
            android:paddingTop="@dimen/margin_15">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/location_info"
                android:textColor="@color/colourBlack"
                android:textSize="@dimen/font_15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/location_info_sub"
                android:textColor="@color/colourBlack"
                android:textSize="@dimen/font_12" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_30"
            android:drawableRight="@drawable/search"
            android:hint="@string/search_profile"
            android:paddingTop="@dimen/margin_10"
            android:textSize="@dimen/font_15"></EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@color/colourRed"
            android:paddingBottom="@dimen/margin_10"
            android:paddingLeft="@dimen/margin_40"
            android:paddingRight="@dimen/margin_40"
            android:paddingTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_20"
            android:text="@string/save"
            android:textColor="@color/textColorPrimary" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

