<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kneedleapp.LandingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_60"
            android:src="@drawable/logo_name" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_red"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_18" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/round_corner_red"
            android:text="@string/register_user"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_18" />

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_red"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/signup_with_facebook"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_18" />

        <Button
            android:id="@+id/btn_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_red"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/signup_with_twitter"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_18" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />



    </LinearLayout>

</RelativeLayout>
