<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:context="com.kneedleapp.ForgotPasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_20"
                android:src="@drawable/logo_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_18"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_25"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/provide_email"
                android:textAllCaps="true"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/font_16" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="@dimen/margin_15"
                android:gravity="center"
                android:hint="@string/example_email"
                android:inputType="textCapWords|textPersonName"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_10"
                android:paddingTop="@dimen/margin_15"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/font_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />


            <Button
                android:id="@+id/btn_send_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:background="@drawable/rect_round_corner"
                android:text="@string/send_email"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/font_18" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>