<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:context="com.kneedleapp.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_20"
                android:src="@drawable/logo_name" />

            <EditText
                android:id="@+id/txt_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="@dimen/margin_15"
                android:hint="@string/username"
                android:text="vikesh01"
                android:inputType="textCapWords|textPersonName"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_10"
                android:paddingTop="@dimen/margin_15"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/font_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/ic_pass_white"
                android:drawablePadding="@dimen/margin_15"
                android:hint="@string/password"
                android:text="vikesh01"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_10"
                android:paddingTop="@dimen/margin_15"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/font_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:background="@drawable/rect_round_corner"
                android:text="@string/login"
                android:imeOptions="actionGo"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/font_18" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_25"
                android:text="@string/forgot_password"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/font_18" />



        </LinearLayout>
    </ScrollView>
</RelativeLayout>